# hearth

./: .editorconfig  .gitignore  .prettierignore  NOTICE  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
backends/go/: .env.example  go.mod  go.sum
backends/java/: README.md
backends/node/: .env.example  README.md  package.json  tsconfig.json
backends/node/src/: agent.ts  customer.ts  db.ts  email.ts  env.ts  ids.ts  index.ts  install.ts  onboard.ts  orgs.ts  schema.ts  share-auth.ts
backends/php/: .env.example  README.md  composer.json
backends/php/bootstrap/: app.php
backends/php/config/: cors.php  hearth.php
backends/php/routes/: web.php
backends/python/: .env.example  README.md  pyproject.toml
backends/python/src/hearth_python/: __init__.py  agent_routes.py  auth_deps.py  customer_routes.py  db.py  email_.py  env.py  ids.py  install_route.py  main.py  onboard_route.py  orgs.py  schema.py  spec_routes.py  stores.py
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: api.ts  db.ts
e2e/tests/: admin-flow.spec.ts  adr-0013-bootstrap.spec.ts  agent-flow.spec.ts  customer-flow.spec.ts  onboard-flow.spec.ts  spa-flow.spec.ts
shared/openapi/: README.md  VENDORED-FROM  refresh.sh
shared/sql/: README.md  VENDORED-FROM  hearth-schema.sql  refresh.sh
web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
web/src/: App.tsx  Layout.tsx  api.ts  index.css  index.ts  main.tsx
web/src/pages/: Account.tsx  (+13 more)
(+25 files in other folders)
